--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -4,10 +4,11 @@ on: workflow_dispatch
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8"]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3
@@ -16,4 +17,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+        run: python -c "import sys; print(sys.version)" > version-${{ matrix.python-version }}.txt
+      - name: Upload version output
+        uses: actions/upload-artifact@v2
+        with:
+          name: version-${{ matrix.python-version }}
+          path: ./version-${{ matrix.python-version }}.txt
